--- a/index.html
+++ b/index.html
@@ -6,67 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link   rel="stylesheet" type="text/css" href="./style.css">
     <title>Document</title>
+    <style>
+    .datepicker{
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 5px;
+        height: 24px;
+        line-height: 24px;
+        width: 240px;
+    }
+
+    .datepicker:focus{
+        outline: 0 none;
+        border: 1px solid #1abc9c; 
+    }
+    </style>
 </head>
 <body>
-    <div class="ui-datepicker-wrapper">
-        <div class="ui-datepicker-header">
-            <a class="ui-datepicker-btn ui-datepicker-prev-btn" href="#">&lt;</a>
-            <a class="ui-datepicker-btn ui-datepicker-next-btn" href="#">&gt;</a>
-            <span class="ui-datepicker-curr-month">2016/12</span>
-        </div>
-        <div class="ui-datepicker-body">
-            <table>
-                <thead>
-                    <tr>
-                        <th>一</th>
-                        <th>二</th>
-                        <th>三</th>
-                        <th>四</th>
-                        <th>五</th>
-                        <th>六</th>
-                        <th>日</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>29</td>
-                        <td>30</td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>4</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>10</td>
-                        <td>11</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                        <td>17</td>
-                        <td>18</td>
-                        <td>19</td>
-                    </tr>
-                    <tr>
-                        <td>21</td>
-                        <td>22</td>
-                        <td>23</td>
-                        <td>24</td>
-                        <td>25</td>
-                        <td>26</td>
-                        <td>27</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <input type="text" class="datepicker" />
+    <!-- <div class="ui-datepicker-wrapper">
+
+    </div> -->
+    
+
+    <script type="text/javascript" src="./data.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
+    <script>
+        datepicker.init(document.querySelector('.datepicker'));
+    </script>
 </body>
 </html>
